--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "echarts": "^4.9.0",
     "element-ui": "^2.15.6",
     "jquery": "^3.6.0",
     "vue": "^2.5.2",
